# study-demo

./: .gitattributes  go.mod  go.sum
controller-runtime/sharded_queue/: README.md  main.go
gpu/cgpu/: .Module.symvers.cmd  .cgpu-km.o.cmd  .cgpu-procfs.o.cmd  .cgpu.mod.cmd  .cgpu_km.ko.cmd  .cgpu_km.mod.cmd  .cgpu_km.mod.o.cmd  .cgpu_km.o.cmd  .modules.order.cmd  .os-interface.o.cmd  Makefile  cgpu-procfs.c  cgpu.mod  cgpu.o.txt  cgpu_km.ko  cgpu_km.mod  cgpu_km.mod.c  install.sh  links.md  modules.order  os-interface.c  sign.der  sign.key
gpu/device-inject/: README.md
gpu/fakegpu/: Makefile  README.md  fake_gpu.c
gpu/rcuda/: rCUDAv16.11.04.02-CUDA8.0-linux64.tgz
gpu/xCUDA/: Cargo.toml  Makefile  README.md
gpu/xCUDA/crates/api/: Cargo.toml
gpu/xCUDA/crates/api/src/: cuda_api.rs  cuda_runtime_api.rs  lib.rs  nvm_api.rs
gpu/xCUDA/crates/code_genearte/: Cargo.toml  builds.rs
gpu/xCUDA/crates/code_genearte/src/: cuda_driver_bindings_11_08.rs  cuda_runtime_bindings_11_08.rs  lib.rs  nvml_driver_bindings_11_08.rs
gpu/xCUDA/crates/cuda-lib/: Cargo.toml
gpu/xCUDA/crates/cuda-runtime-lib/: Cargo.toml
gpu/xCUDA/crates/cuda-runtime-lib/src/: lib.rs
gpu/xCUDA/crates/nvml-lib/: Cargo.toml
gpu/xCUDA/crates/nvml-lib/src/: lib.rs
gpu/xCUDA/crates/server/: Cargo.toml  builds.rs
gpu/xCUDA/crates/server/src/: main.rs
gpu/xCUDA/crates/server/src/remote/: cuda.rs  cuda_runtime.rs  mod.rs  nvml.rs  server.rs
gpu/xCUDA/samples/: Cargo.toml
llm-study/rag-system/: app.py
