[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false
description = "this is RPC api create for remote gpu"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarpc = { version = "0.33.0", features = ["full"] }
code_genearte = { version = "0.0.1", path = "../code_genearte" }
