[package]
name = "code_genearte"
version = "0.0.1"
edition = "2021"
publish = false
build = "builds.rs"


[build-dependencies]
bindgen = "0.69.1"
heck = "0.5.0-rc.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = { version = "0.5.0-rc.1", features = [] }
