[package]
name = "cuda-runtime-lib"
version = "0.1.0"
edition = "2021"
description = "cuda-runtime-lib is a about libcudart.so project"

[lib]
name="cudart"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clib = "0.2.1"
bindgen = "0.69.1"
api = { version = "0.1.0", path = "../api" }
code_genearte = { version = "0.0.1", path = "../code_genearte" }
tokio = { version = "1.24.2", features = ["full"] }
futures = "0.3.29"
tarpc = { version = "0.33.0", features = ["full"] }
tokio-serde = "0.8.0"