[package]
name = "nvml-lib"
version = "0.1.0"
edition = "2021"
description = "nvml-lib is a about libnvidia-ml.so project"

[lib]
name="nvidia_ml"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.24.2", features = ["full"] }
futures = "0.3.29"
tarpc = { version = "0.33.0", features = ["full"] }
tokio-serde = "0.8.0"
futures-util = "0.3.25"
libloading = "0.8.1"
libc = "0.2.139"
anyhow = "1.0.68"
api = { version = "0.1.0", path = "../api" }
